[package]
name = "rusttesserast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tesseract-sys = "~0.5.15"
tesseract-plumbing = "~0.9.0"
thiserror = "1.0"
field_accessor = "0.5.2"
either = "1.9"
mockall = "0.11.2"
derivative = "2.2.0"
glob = "0.3.1"

