[package]
description = "A simple library providing the asynchronous methods for tesseract api."
name = "rusttesserast"
version = "0.0.1-alpha.2"
edition = "2018"
rust-version = "1.74.0"
license = "MIT"
repository = "https://github.com/spectrtrec/rusttesserast"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tesseract-sys = "~0.5.15"
tesseract-plumbing = "~0.9.0"
thiserror = "1.0"
field_accessor = "0.5.2"
either = "1.9"
mockall = "0.11.2"
derivative = "2.2.0"
glob = "0.3.1"
tokio = { version = "1.34.0", features = ["full"] }
futures = { version = "0.3.29" }
